syntax = "proto3";

package smartretail;

//stock control service
service StockControl{
    //adds product to stock
    rpc AddProduct (Product) returns (ProductResponse);
    //gets product from stock
    rpc GetProducts (Empty) returns (ProductList);
}

//chat service definition.
service ChatService {
  // Sends a greeting
  rpc Chat(stream ChatMessage) returns (stream ChatMessage) {}
}

//request message containing the user's name.
message ChatMessage {
  string user = 1;
  string message = 2;
}

//product structure defines the structure of product in system 
message Product {
    string id = 1;
    string name = 2;
    double price = 3;
    int32 quantity = 4;
}

//represents response to operations performed on product like addition, deletion and updting
message ProductResponse {
    string id = 1;
    string message = 2;
}

//empty message for GetProducts
message Empty {}

//message for list of products
message ProductList {
    repeated Product products = 1;
}
